# pixiv-api

./: .coveragerc  .gitignore  Makefile  README.md  README.rst  dev.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api.rst  changelog.rst  conf.py  index.rst  quickstart.rst
docs/_static/: custom.css
pixivapi/: __init__.py  client.py  common.py  enums.py  errors.py  illustrations.py  models.py
tests/: conftest.py  mocked_responses.py  test_client.py  test_common.py  test_models.py
tests/snapshots/: snap_test_client.py
