[tool.poetry]
name = "pixiv-api"
version = "0.3.3"
description = "A library for the Pixiv API."
authors = ["azuline <azuline@riseup.net>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/azuline/pixiv-api"
packages = [
    { include = "pixivapi" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.0.0"

[tool.poetry.dev-dependencies]
isort = "^4.3"
flake8 = "^3.7"
sphinx = "^2.1"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
