[tool.poetry]
name = "pixiv-api"
version = "1.0.0"
description = "A library for the Pixiv API."
authors = ["blissful <blissful@sunsetglow.net>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/azuline/pixiv-api"
packages = [
    { include = "pixivapi" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.0.0"
cloudscraper = "^1.2.48"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
sphinx = "^2.1"
sphinx_rtd_theme = "^0.4.3"
responses = "^0.12.1"
dephell = "^0.8.3"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
snapshottest = "^0.6.0"

[tool.black]
line-length = 88
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
	| snapshots
  )/
  | ^/setup\.py
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
